Fixing model paths

--- a/Explainability.ipynb
+++ b/Explainability.ipynb
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/us8k/16000-15-mel32\"\n",
+    "path = \"./trained_models/us8k/16000-15-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-conv1d\"\n",
+    "path = \"./trained_models/esc50/16000-15-conv1d\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -367,7 +367,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/us8k/16000-15-conv1d\"\n",
+    "path = \"./trained_models/us8k/16000-15-conv1d\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -460,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "fold = 1\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -513,7 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "fold = 1\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -566,7 +566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "fold = 1\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -619,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "fold = 1\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -796,7 +796,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -852,7 +852,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel64\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel64\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -908,7 +908,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-1-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-1-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -964,7 +964,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-1-mel64\"\n",
+    "path = \"./trained_models/esc50/16000-1-mel64\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -1015,7 +1015,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -1059,7 +1059,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -1103,7 +1103,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
@@ -1147,7 +1147,7 @@
     }
    ],
    "source": [
-    "path = \"./trained_models - Copia/esc50/16000-15-mel32\"\n",
+    "path = \"./trained_models/esc50/16000-15-mel32\"\n",
     "with open(f\"{path}/config.yaml\", errors='ignore') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
